Rende configurabile CORS_ALLOWED_ORIGINS, prima hardcoded a localhost:3000
SecurityConfig.corsConfigurationSource() aveva le origini permesse
scritte direttamente nel codice Java (List.of("http://localhost:3000")):
nessuna variabile d'ambiente era mai stata collegata, motivo per cui
CORS_ALLOWED_ORIGINS impostata su Railway non ha mai avuto alcun effetto.

app.cors.allowed-origins (default localhost:3000, invariato per lo
sviluppo locale) ora pilota le origini permesse, split su virgola per
autorizzarne più di una insieme senza ritoccare il codice una seconda
volta. Verificato end-to-end (non solo che l'app si avvii con la
property presente): Access-Control-Allow-Origin nella risposta reale
rispecchia il valore configurato, sia sul default sia su un elenco
multiplo custom, e un'origine fuori elenco viene rifiutata (403) dal
filtro CORS di Spring.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MT3eNkm6zeKyh7BQLPDSi5